--- a/tools/functional-tester/docker/docker-compose-namazu.yml
+++ b/tools/functional-tester/docker/docker-compose-namazu.yml
@@ -27,3 +27,19 @@ tester:
     - "1"
     - -no-failure
     - "true"
+    - -terminate-agents
+    - "false"
+checker:
+  build: .
+  privileged: true
+  net: etcd-functional
+  command:
+    - /etcd-tester
+    - -agent-endpoints
+    - "172.20.0.2:9027,172.20.0.3:9027,172.20.0.4:9027"
+    - -no-failure
+    - "true"
+    - -check-only
+    - "true"
+    - -terminate-agents
+    - "false"
